<resources>
    <string name="title_upcoming">UpComing</string>
    <string name="title_finished">Finished</string>
    <string name="no_event">Tidak Ada Event</string>
    <string name="event_image">event image</string>
    <string name="cover_image">cover_image</string>
    <string name="event_descripsi">event descripsi</string>
    <string name="register">register</string>
    <string name="kategori">Kategori: %1$s</string>
    <string name="penyelenggara">Penyelenggara: %1$s</string>
    <string name="lokasi">Lokasi: %1$s</string>
    <string name="tanggal">Tanggal: %1$s</string>
    <string name="waktu">Waktu: %1$s - %2$s</string>
    <string name="kuota">Sisa Kuota: %1$s</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="finished_event">Finished Event</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="image_logo">image logo</string>
    <string name="search">Search…</string>
    <string name="tidak_dapat_diakses">Tidak dapat diakses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="favorite_label">favorite_label</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_disable_dark_mode">Enable/Disable Dark Mode</string>
    <string name="my_favorite_event">My Favorite Event</string>
    <string name="isfavorite">isFavorite</string>
    <string name="reminder">Reminder</string>
    <string name="enable_disable_reminder">Enable/Disable Reminder</string>
    <string name="pathdata">M19.14,12.94c0.04,-0.3 0.06,-0.61 0.06,-0.94c0,-0.32 -0.02,-0.64 -0.07,-0.94l2.03,-1.58c0.18,-0.14 0.23,-0.41 0.12,-0.61l-1.92,-3.32c-0.12,-0.22 -0.37,-0.29 -0.59,-0.22l-2.39,0.96c-0.5,-0.38 -1.03,-0.7 -1.62,-0.94L14.4,2.81c-0.04,-0.24 -0.24,-0.41 -0.48,-0.41h-3.84c-0.24,0 -0.43,0.17 -0.47,0.41L9.25,5.35C8.66,5.59 8.12,5.92 7.63,6.29L5.24,5.33c-0.22,-0.08 -0.47,0 -0.59,0.22L2.74,8.87C2.62,9.08 2.66,9.34 2.86,9.48l2.03,1.58C4.84,11.36 4.8,11.69 4.8,12s0.02,0.64 0.07,0.94l-2.03,1.58c-0.18,0.14 -0.23,0.41 -0.12,0.61l1.92,3.32c0.12,0.22 0.37,0.29 0.59,0.22l2.39,-0.96c0.5,0.38 1.03,0.7 1.62,0.94l0.36,2.54c0.05,0.24 0.24,0.41 0.48,0.41h3.84c0.24,0 0.44,-0.17 0.47,-0.41l0.36,-2.54c0.59,-0.24 1.13,-0.56 1.62,-0.94l2.39,0.96c0.22,0.08 0.47,0 0.59,-0.22l1.92,-3.32c0.12,-0.22 0.07,-0.47 -0.12,-0.61L19.14,12.94zM12,15.6c-1.98,0 -3.6,-1.62 -3.6,-3.6s1.62,-3.6 3.6,-3.6s3.6,1.62 3.6,3.6S13.98,15.6 12,15.6z</string>
</resources>